// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Section component Should render the Section component 1`] = `
<DocumentFragment>
  <main
    class="o-main"
  >
    <section
      class="c-section c-section--section test"
      id="section"
    >
      <div
        class="o-shell"
      >
        <p>
          Test
        </p>
        <p>
          Test
        </p>
        <div
          class="c-section__actions"
        >
          <button
            class="c-btn"
            type="button"
          >
            Get in touch
          </button>
          <ul
            class="c-section__actions-list"
          >
            <li>
              <button
                class="c-btn c-section__actions-close"
                type="button"
              >
                Close
              </button>
            </li>
            <li>
              <button
                class="c-btn"
                type="button"
              >
                <svg
                  class="c-section__actions-icon"
                >
                  <use
                    xlink:href="#svg-email"
                  />
                </svg>
                <span>
                  Contact me
                </span>
                <strong>
                  directly
                </strong>
              </button>
            </li>
            <li>
              <a
                class="c-btn"
                href="https://app.usebraintrust.com/talent/782/"
                rel="noopener noreferrer"
                target="_blank"
              >
                <svg
                  class="c-section__actions-icon"
                >
                  <use
                    xlink:href="#svg-braintrust"
                  />
                </svg>
                <span>
                  Hire me on
                </span>
                <strong>
                  Braintrust
                </strong>
              </a>
            </li>
            <li>
              <a
                class="c-btn"
                href="https://www.toptal.com/resume/atanas-atanasov"
                rel="noopener noreferrer"
                target="_blank"
              >
                <svg
                  class="c-section__actions-icon"
                >
                  <use
                    xlink:href="#svg-toptal"
                  />
                </svg>
                <span>
                  Hire me on
                </span>
                <strong>
                  Toptal
                </strong>
              </a>
            </li>
          </ul>
        </div>
      </div>
    </section>
  </main>
</DocumentFragment>
`;

exports[`Section component Should render the Section component without a button 1`] = `
<DocumentFragment>
  <main
    class="o-main"
  >
    <section
      class="c-section c-section--section"
      id="section"
    >
      <div
        class="o-shell o-shell--flex"
      >
        <p>
          Test
        </p>
        <p>
          Test
        </p>
      </div>
    </section>
  </main>
</DocumentFragment>
`;

exports[`Section component Should render the Section component without a button and a shell 1`] = `
<DocumentFragment>
  <main
    class="o-main"
  >
    <section
      class="c-section c-section--section test"
      id="section"
    >
      <p>
        Test
      </p>
      <p>
        Test
      </p>
    </section>
  </main>
</DocumentFragment>
`;

exports[`Section component Should render the Section component without a shell 1`] = `
<DocumentFragment>
  <main
    class="o-main"
  >
    <section
      class="c-section c-section--section test"
      id="section"
    >
      <p>
        Test
      </p>
      <p>
        Test
      </p>
      <div
        class="c-section__actions"
      >
        <button
          class="c-btn"
          type="button"
        >
          Get in touch
        </button>
        <ul
          class="c-section__actions-list"
        >
          <li>
            <button
              class="c-btn c-section__actions-close"
              type="button"
            >
              Close
            </button>
          </li>
          <li>
            <button
              class="c-btn"
              type="button"
            >
              <svg
                class="c-section__actions-icon"
              >
                <use
                  xlink:href="#svg-email"
                />
              </svg>
              <span>
                Contact me
              </span>
              <strong>
                directly
              </strong>
            </button>
          </li>
          <li>
            <a
              class="c-btn"
              href="https://app.usebraintrust.com/talent/782/"
              rel="noopener noreferrer"
              target="_blank"
            >
              <svg
                class="c-section__actions-icon"
              >
                <use
                  xlink:href="#svg-braintrust"
                />
              </svg>
              <span>
                Hire me on
              </span>
              <strong>
                Braintrust
              </strong>
            </a>
          </li>
          <li>
            <a
              class="c-btn"
              href="https://www.toptal.com/resume/atanas-atanasov"
              rel="noopener noreferrer"
              target="_blank"
            >
              <svg
                class="c-section__actions-icon"
              >
                <use
                  xlink:href="#svg-toptal"
                />
              </svg>
              <span>
                Hire me on
              </span>
              <strong>
                Toptal
              </strong>
            </a>
          </li>
        </ul>
      </div>
    </section>
  </main>
</DocumentFragment>
`;

exports[`SectionComponent component Should render the SectionComponent component 1`] = `
<DocumentFragment>
  <main
    class="o-main"
  >
    <section
      class="c-section c-section--test"
      id="test"
    >
      <div
        class="o-shell"
      >
        Test
        <div
          class="c-section__actions"
        >
          <button
            class="c-btn"
            type="button"
          >
            Get in touch
          </button>
          <ul
            class="c-section__actions-list"
          >
            <li>
              <button
                class="c-btn c-section__actions-close"
                type="button"
              >
                Close
              </button>
            </li>
            <li>
              <button
                class="c-btn"
                type="button"
              >
                <svg
                  class="c-section__actions-icon"
                >
                  <use
                    xlink:href="#svg-email"
                  />
                </svg>
                <span>
                  Contact me
                </span>
                <strong>
                  directly
                </strong>
              </button>
            </li>
            <li>
              <a
                class="c-btn"
                href="https://app.usebraintrust.com/talent/782/"
                rel="noopener noreferrer"
                target="_blank"
              >
                <svg
                  class="c-section__actions-icon"
                >
                  <use
                    xlink:href="#svg-braintrust"
                  />
                </svg>
                <span>
                  Hire me on
                </span>
                <strong>
                  Braintrust
                </strong>
              </a>
            </li>
            <li>
              <a
                class="c-btn"
                href="https://www.toptal.com/resume/atanas-atanasov"
                rel="noopener noreferrer"
                target="_blank"
              >
                <svg
                  class="c-section__actions-icon"
                >
                  <use
                    xlink:href="#svg-toptal"
                  />
                </svg>
                <span>
                  Hire me on
                </span>
                <strong>
                  Toptal
                </strong>
              </a>
            </li>
          </ul>
          <br
            class="visible-xs-block"
          />
        </div>
      </div>
    </section>
  </main>
</DocumentFragment>
`;

exports[`SectionComponent component Should unmount the SectionComponent component 1`] = `<DocumentFragment />`;

exports[`SectionElements component Should render the SectionElements component 1`] = `
<DocumentFragment>
  <p>
    Test
  </p>
  <p>
    Test
  </p>
  <div
    class="c-section__actions"
  >
    <button
      class="c-btn"
      type="button"
    >
      Get in touch
    </button>
    <ul
      class="c-section__actions-list"
    >
      <li>
        <button
          class="c-btn c-section__actions-close"
          type="button"
        >
          Close
        </button>
      </li>
      <li>
        <button
          class="c-btn"
          type="button"
        >
          <svg
            class="c-section__actions-icon"
          >
            <use
              xlink:href="#svg-email"
            />
          </svg>
          <span>
            Contact me
          </span>
          <strong>
            directly
          </strong>
        </button>
      </li>
      <li>
        <a
          class="c-btn"
          href="https://app.usebraintrust.com/talent/782/"
          rel="noopener noreferrer"
          target="_blank"
        >
          <svg
            class="c-section__actions-icon"
          >
            <use
              xlink:href="#svg-braintrust"
            />
          </svg>
          <span>
            Hire me on
          </span>
          <strong>
            Braintrust
          </strong>
        </a>
      </li>
      <li>
        <a
          class="c-btn"
          href="https://www.toptal.com/resume/atanas-atanasov"
          rel="noopener noreferrer"
          target="_blank"
        >
          <svg
            class="c-section__actions-icon"
          >
            <use
              xlink:href="#svg-toptal"
            />
          </svg>
          <span>
            Hire me on
          </span>
          <strong>
            Toptal
          </strong>
        </a>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`SectionElements component Should render the SectionElements component without a button 1`] = `
<DocumentFragment>
  <p>
    Test
  </p>
  <p>
    Test
  </p>
</DocumentFragment>
`;

exports[`SectionElements component Should render the SectionElements component without a button and a shell 1`] = `
<DocumentFragment>
  <p>
    Test
  </p>
  <p>
    Test
  </p>
</DocumentFragment>
`;

exports[`SectionElements component Should render the SectionElements component without a shell 1`] = `
<DocumentFragment>
  <p>
    Test
  </p>
  <p>
    Test
  </p>
  <div
    class="c-section__actions"
  >
    <button
      class="c-btn"
      type="button"
    >
      Get in touch
    </button>
    <ul
      class="c-section__actions-list"
    >
      <li>
        <button
          class="c-btn c-section__actions-close"
          type="button"
        >
          Close
        </button>
      </li>
      <li>
        <button
          class="c-btn"
          type="button"
        >
          <svg
            class="c-section__actions-icon"
          >
            <use
              xlink:href="#svg-email"
            />
          </svg>
          <span>
            Contact me
          </span>
          <strong>
            directly
          </strong>
        </button>
      </li>
      <li>
        <a
          class="c-btn"
          href="https://app.usebraintrust.com/talent/782/"
          rel="noopener noreferrer"
          target="_blank"
        >
          <svg
            class="c-section__actions-icon"
          >
            <use
              xlink:href="#svg-braintrust"
            />
          </svg>
          <span>
            Hire me on
          </span>
          <strong>
            Braintrust
          </strong>
        </a>
      </li>
      <li>
        <a
          class="c-btn"
          href="https://www.toptal.com/resume/atanas-atanasov"
          rel="noopener noreferrer"
          target="_blank"
        >
          <svg
            class="c-section__actions-icon"
          >
            <use
              xlink:href="#svg-toptal"
            />
          </svg>
          <span>
            Hire me on
          </span>
          <strong>
            Toptal
          </strong>
        </a>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;
